Authentication with database added, login and register