@@ -9,12 +9,6 @@ plugins {
 group = "com.rustedcor"
 version = "0.0.1-SNAPSHOT"
 
-configurations {
-	create("mockitoAgent"){
-		isTransitive = false
-	}
-}
-
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
@@ -26,7 +20,6 @@ repositories {
 }
 
 dependencies {
-	"mockitoAgent"("org.mockito:mockito-core:5.15.2")
 	implementation("org.springframework.boot:spring-boot-starter-actuator")
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation("org.springframework.boot:spring-boot-starter-security")
@@ -37,20 +30,20 @@ dependencies {
 	implementation("org.jetbrains.kotlin:kotlin-reflect")
 	implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
 	runtimeOnly("org.postgresql:postgresql")
-	// JWT
 	implementation("io.jsonwebtoken:jjwt-api:0.12.6")
 	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
 	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
 
+	// Test dependencies
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("io.projectreactor:reactor-test")
 	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
 	testImplementation("org.springframework.security:spring-security-test")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-	testImplementation("org.mockito:mockito-core:5.15.2")
-	testImplementation("org.mockito:mockito-junit-jupiter:5.15.2")
+	testImplementation("org.mockito:mockito-core:5.12.0")
+	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("org.mockito:mockito-junit-jupiter:5.12.0")
 }
-
 
 kotlin {
 	compilerOptions {
@@ -67,15 +60,12 @@ allOpen {
 tasks {
 	test {
 		useJUnitPlatform()
-		doFirst {
-			val mockitoAgent = configurations["mockitoAgent"].singleFile
-			jvmArgs = listOf(
-				"-Xshare:off",
-				"--add-opens=java.base/java.lang=ALL-UNNAMED",
-				"--add-opens=java.base/java.time=ALL-UNNAMED",
-				"-javaagent:${mockitoAgent.absolutePath}"
-			)
-		}
+		jvmArgs = listOf(
+			"-XX:+EnableDynamicAgentLoading",
+			"-Xshare:off",
+			"--add-opens=java.base/java.lang=ALL-UNNAMED",
+			"--add-opens=java.base/java.time=ALL-UNNAMED"
+		)
 		testLogging {
 			events("passed", "skipped", "failed")
 		}
